# My.project

./: .gitignore  LICENSE  Messstationen_Graz_Tagesdaten_v2_Datensatz_19220101_20251031 (1).csv  N_seaice_extent_daily_v4.0 (2).csv  README.md  README_gitlab_template.md  analysis.py  data_loader.py  graz_climate_analysis.py  main.py  old_script.py  plottings.py  pyproject.toml  readme.html
MyProjectRepo.git/: config  packed-refs
MyProjectRepo.git/objects/pack/: pack-e517f26ff03217d454770d865dbe1d7ee2e1b6f5.idx  pack-e517f26ff03217d454770d865dbe1d7ee2e1b6f5.pack  pack-e517f26ff03217d454770d865dbe1d7ee2e1b6f5.rev
src/climatecli/: __init__.py  cli.py  core.py  example.py  plots.py  utils.py
src/climatecli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/climatecli/data/: some_data.yml
src/python_template.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
